multilingo - removed spring references
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@891 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/tools/multilingo/import/html_files/newcontent_en.html
+++ b/tools/multilingo/import/html_files/newcontent_en.html
@@ -1,7 +1,7 @@
    <div id="bd">
     <div id="yui-main">
         <div class="yui-b">
-            <h1><@spring.message 'NewContent_t' /></h1>
+            <h1>New content</h1>
         <#if staticPagesSource?matches("database")>
                 <#if staticPage?? >${staticPage.content}</#if>
             <#elseif staticPagesSource?matches("include")>
