--- a/tools/multilingo/import/html_files/thought-lab_en.html
+++ b/tools/multilingo/import/html_files/thought-lab_en.html
@@ -1,6 +1,6 @@
  <div id="yui-main">
             <div class="yui-b">
-                <h1><@spring.message 'ThoughtLab_t' /></h1>
+                <h1>Thought lab</h1>
 
                 <div class="yui-gb">
                     <div class="yui-u first" style="width:65%">
