#569 update error message malformed query, display of matchdoc in briefView, display of breadcrumbs in brief-doc, added some missing refernces to js files
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@895 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8

--- a/portal-full/src/test/staticpages/partners_en.html
+++ b/portal-full/src/test/staticpages/partners_en.html
@@ -1,6 +1,5 @@
 <h1>Partners</h1>
 
-<div class="yui-g">        
 <table id="tblPartners" class="tblList">
     <thead>
         <tr>
@@ -511,8 +510,7 @@ This is the network of partners who collaborated to make Europeana happen, and w
                 <td><a href="http://www.knaw.nl/ecpa" target="_blank"/>European Commission on Preservation & Access </td>
             </tr>
     </tbody>
-</table>            </div>
-            <div class="yui-g">
+</table>
 
             <h1>Contributors</h1>
 <table id="tblContributors" class="tblList">
@@ -878,4 +876,3 @@ This is the network of partners who collaborated to make Europeana happen, and w
             </tr>
     </tbody>
 </table>
-</div>
