All homepage ajax blocks called with delvingPageCall() function. function resides in js_utilities.js and the calls are made from the index.js These calls assume the presence of /home/news.dml, /home/block1.dml, /home/block2.dml and /home/block3.dml - perhaps these can be put into mongo as default homepage sections.

--- a/portal/src/main/webapp/index.html
+++ b/portal/src/main/webapp/index.html
@@ -2,10 +2,10 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-  <title>Europeana Portal</title>
+  <title>Delving Portal</title>
 </head>
 <body>
-<h1>Europeana Portal</h1>
+<h1>Delving Portal</h1>
 <p>This page should never appear.</p>
 </body>
 </html>
